--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
                             </ul>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="mystory.html">Resume</a></li>
                     </ul>
                     <!-- <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
